--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "buefy": "^0.6.3",
-    "rxjs": "^5.5.7",
+    "rxjs": "^6.0.0-beta.0",
     "vue": "^2.5.13",
     "vue-axios": "^2.0.2",
     "vue-rx": "^5.0.0"
